TM-5369 Fixed square misaligned and verified is not available somewhere else
git-svn-id: https://opsvcs.tdsops.com/repos/tdstm/trunk@7558 fecba46a-3362-0410-80e5-8c76cdb905a0

--- a/web-app/css/page/module/Assets/dependencyAnalyzer.sass
+++ b/web-app/css/page/module/Assets/dependencyAnalyzer.sass
@@ -42,7 +42,7 @@ div.content-wrapper
         &.open
           display: block !important
           position: absolute
-          left: 284px
+          left: 266px
           top: 21px
           background-color: #ffffff
           cursor: auto !important
